로고 부분 이미지 삭제

--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -19,8 +19,7 @@
     <div class="container">
       <div class="header-inner">
         <div class="logo-box">
-          <img src="/Mypage/myimage/image.png" alt="로고" class="logo-icon" />
-          <span class="logo">Init</span>
+          <span class="logo">Init.</span>
         </div>
         <div class="navbar-right">
           <button class="alarm-button">🔔</button>
