--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="header-inner">
         <div class="logo-box">
-          <span class="logo">Init.</span>
+          <span class="logo"><a href="/Mypage/Mypage.html" class="logo">Init.</a></span>
         </div>
         <div class="navbar-right">
           <button class="alarm-button">🔔</button>
@@ -32,10 +32,12 @@
 
   <!-- 메인 메뉴 -->
   <div class="menu-bar">
-    <div class="menu-item">
-      <div class="emoji">🧑‍💻</div>
-      <span>MyPage</span>
-    </div>
+    <a href="/MypageMain/main.html" class="menu-item">
+      <div class="menu-item">
+        <div class="emoji">🧑‍💻</div>
+        <span>MyPage</span>
+      </div>
+    </a>
     <div class="menu-item">
       <div class="emoji">📄</div>
       <span>이력서 관리</span>
@@ -308,8 +310,8 @@
             <th>학력 <span class="required">필수</span></th>
             <td><input type="email" placeholder="최종학력을 입력해주세요." /></td>
           </tr>
-          
-          
+
+
         </table>
 
         <div class="button-bottom">
@@ -323,18 +325,18 @@
 
 
   <!-- 알림 패널 -->
-<div id="notification-panel" class="popup-panel" style="display: none;">
-  <div class="popup-content">
-    <p>🔔 새로운 알림이 없습니다.</p>
+  <div id="notification-panel" class="popup-panel" style="display: none;">
+    <div class="popup-content">
+      <p>🔔 새로운 알림이 없습니다.</p>
+    </div>
   </div>
-</div>
 
-<!-- 유저 패널 (로그아웃 등) -->
-<div id="user-panel" class="popup-panel" style="display: none;">
-  <div class="popup-content">
-    <button class="logout-action">로그아웃</button>
+  <!-- 유저 패널 (로그아웃 등) -->
+  <div id="user-panel" class="popup-panel" style="display: none;">
+    <div class="popup-content">
+      <button class="logout-action">로그아웃</button>
+    </div>
   </div>
-</div>
 
 
 
