자소서 헤더 푸터 추가함

--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -42,10 +42,12 @@
       <div class="emoji">📄</div>
       <span>이력서 관리</span>
     </div>
-    <div class="menu-item">
-      <div class="emoji">✍️</div>
-      <span>자기소개서</span>
-    </div>
+    <a href="/junyoung/101010 copy.html" class="menu-item">
+      <div class="menu-item">
+        <div class="emoji">✍️</div>
+        <span>자기소개서</span>
+      </div>
+    </a>
     <div class="menu-item">
       <div class="emoji">🗓️</div>
       <span>공고 캘린더</span>
