--- a/MypageMain/Mypage_main.html
+++ b/MypageMain/Mypage_main.html
@@ -120,16 +120,11 @@
             <div class="section-sub">대내외 활동, 해외 경험, 봉사 경험 등을 적어주세요.</div>
             <div class="experience-item">
                 <div class="tag">봉사 활동</div>
-                <h4>안동시자원봉사센터</h4>
+                <h4>자원봉사센터</h4>
                 <p>📅 2022.09 ~ 2023.11</p>
                 <p>매주 토요일마다 지역봉사 활동진행</p>
             </div>
-            <div class="experience-item">
-                <div class="tag">봉사 활동</div>
-                <h4>안동시자원봉사센터</h4>
-                <p>📅 2022.09 ~ 2023.11</p>
-                <p>매주 토요일마다 지역봉사 활동진행</p>
-            </div>
+            
         </div>
 
         <!-- 수상내역 -->
