각 페이지 메뉴 연결

--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -48,10 +48,12 @@
         <span>자기소개서</span>
       </div>
     </a>
-    <div class="menu-item">
-      <div class="emoji">🗓️</div>
-      <span>공고 캘린더</span>
-    </div>
+    <a href="/calendar/calendar.html" class="menu-item">
+      <div class="menu-item">
+        <div class="emoji">🗓️</div>
+        <span>공고 캘린더</span>
+      </div>
+    </a>
     <div class="menu-item">
       <div class="emoji">💬</div>
       <span>커뮤니티</span>
