--- a/Login/1/login_main.html
+++ b/Login/1/login_main.html
@@ -10,9 +10,9 @@
 
 <body>
 	<nav>
-		<h1><a href="#">INIT</a></h1>
+		<h1><a href="#">Init</a></h1>
 		<ul>
-			<li><a href="#">COMPANY</a></li>
+			<li><a href="#">ABOUT US</a></li>
 			<li><a href="#">CONTACT</a></li>
 			<li><a href="#">LOGIN</a></li>
 		</ul>
@@ -43,7 +43,7 @@
 			<div class="overlay login-overlay">
 				<div class="login">
 					<h2>이 모든 것을 한번에</h2>
-					<button type="">회원가입하고 누리기</button>
+					<button type="">로그인하고 누리기</button>
 				</div>
 			</div>
 		</div>
