--- a/Login/1. 첫 화면/login_main.html
+++ b/Login/1. 첫 화면/login_main.html
@@ -20,30 +20,35 @@
 
 	<div class="panel-container">
 		<div class="panel">
+			<img src="/Login/images/01.png" class="panel-image" />
 			<div class="overlay">
 				<h2>이력서 관리</h2>
 			</div>
 		</div>
 		<div class="panel">
+			<img src="/Login/images/02.png" class="panel-image" />
 			<div class="overlay">
 				<h2>자소서 관리</h2>
 			</div>
 		</div>
 		<div class="panel">
+			<img src="/Login/images/03.png" class="panel-image" />
 			<div class="overlay">
 				<h2>스케줄 관리</h2>
 			</div>
 		</div>
 		<div class="panel">
+			<img src="/Login/images/04.png" class="panel-image" />
 			<div class="overlay">
 				<h2>커뮤니티</h2>
 			</div>
 		</div>
-		<div class="panel">
+		<div class="panel last-panel">
+			<img src="/Login/images/00.png" class="panel-image" />
 			<div class="overlay login-overlay">
 				<div class="login">
 					<h2>이 모든 것을 한번에</h2>
-					<button type="">로그인하고 누리기</button>
+					<a href="/Login/3. 회원가입/3_join.html"><button type="">로그인하고 누리기</button></a>
 				</div>
 			</div>
 		</div>
