--- a/Login/2. 로그인/회원가입 화면/login.html
+++ b/Login/2. 로그인/회원가입 화면/login.html
@@ -12,7 +12,7 @@
 <body>
     <main class="form-signin">
         <form id="login-form">
-            <img src="/Login/images/1.png" alt="logo" class="logo" />
+            <img src="/Login/images/logo.png" alt="logo" class="logo" />
 
             <div class="form-floating">
                 <input type="text" id="id-input" class="form-control" placeholder=" " required />
@@ -34,9 +34,11 @@
             <div class="signup-link">
                 아직 회원이 아니신가요? <a href="signup.html">회원가입</a>
             </div>
-
         </form>
+
+    
     </main>
+
 </body>
 
 </html>
