--- a/Resume/resumeEdit.html
+++ b/Resume/resumeEdit.html
@@ -126,7 +126,7 @@
                             <div class="edu-content">
                                 <!-- 학교 이름 -->
                                 <div class="edu-school-name">
-                                    <strong>00대학교</strong>
+                                    <p>00대학교</p>
                                 </div>
 
                                 <!-- 기간, 졸업상태, 전공 -->
