이력서 메뉴 연결

--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -38,10 +38,13 @@
         <span>MyPage</span>
       </div>
     </a>
-    <div class="menu-item">
-      <div class="emoji">📄</div>
-      <span>이력서 관리</span>
-    </div>
+
+    <a href="/Resume/resume.html" class="menu-item">
+      <div class="menu-item">
+        <div class="emoji">📄</div>
+        <span>이력서 관리</span>
+      </div>
+    </a>
     <a href="/junyoung/101010 copy.html" class="menu-item">
       <div class="menu-item">
         <div class="emoji">✍️</div>
