--- a/Resume/resumeEdit.html
+++ b/Resume/resumeEdit.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -13,7 +14,7 @@
     <div>
         <div class="editor-header">
             <div class="editor-back">
-                <button class="before-btn"><a>← 이전 페이지</a></button>
+                <button class="before-btn"><a href="/Resume/resume.html">← 이전 페이지</a></button>
             </div>
             <div class="editor-center">
                 <div class="resume-option">
