전메뉴 연결.

--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -33,26 +33,26 @@
   <!-- 메인 메뉴 -->
   <div class="menu-bar">
     <a href="/MypageMain/Mypage_main.html" class="menu-item">
-      <div class="menu-item">
+      <div>
         <div class="emoji">🧑‍💻</div>
         <span>MyPage</span>
       </div>
     </a>
 
     <a href="/Resume/resume.html" class="menu-item">
-      <div class="menu-item">
+      <div >
         <div class="emoji">📄</div>
         <span>이력서 관리</span>
       </div>
     </a>
     <a href="/junyoung/101010 copy.html" class="menu-item">
-      <div class="menu-item">
+      <div>
         <div class="emoji">✍️</div>
         <span>자기소개서</span>
       </div>
     </a>
     <a href="/calendar/calendar.html" class="menu-item">
-      <div class="menu-item">
+      <div>
         <div class="emoji">🗓️</div>
         <span>공고 캘린더</span>
       </div>
