--- a/Login/1. 첫 화면/first_main.html
+++ b/Login/1. 첫 화면/first_main.html
@@ -5,16 +5,16 @@
 	<meta charset="UTF-8">
 	<title>Project</title>
 	
-	<link rel = "stylesheet" href="style.css">
+	<link rel = "stylesheet" href="first_style.css">
 </head>
 
 <body>
 	<nav>
 		<h1><a href="#">Init</a></h1>
 		<ul>
-			<li><a href="#">ABOUT US</a></li>
-			<li><a href="#">CONTACT</a></li>
-			<li><a href="#">LOGIN</a></li>
+			<li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
+			<li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
+			<li><a href="/Login/2. 로그인_회원가입 화면/login_join_main.html">LOGIN</a></li>
 		</ul>
 	</nav>
 
@@ -48,13 +48,13 @@
 			<div class="overlay login-overlay">
 				<div class="login">
 					<h2>이 모든 것을 한번에</h2>
-					<a href="/Login/3. 회원가입/3_join.html"><button type="">로그인하고 누리기</button></a>
+					<a href="/Login/2. 로그인_회원가입 화면/login_join_main.html"><button type="">로그인하고 누리기</button></a>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<script src="motion_script.js"></script>
+	<script src="first_script.js"></script>
 </body>
 
 </html>
