로그인-About-Contact-Login 연결 완료

--- a/Login/2. 로그인_회원가입 화면/login_join_main.html
+++ b/Login/2. 로그인_회원가입 화면/login_join_main.html
@@ -13,7 +13,7 @@
         <div class="card" id="card">
             <!-- 로그인 화면 (앞면) -->
             <div class="side front">
-                <img src="/Login/images/logo.png" alt="logo" class="logo" />
+                <a href="/Login/1. 첫 화면/first_main.html"><img src="/Login/images/logo.png" alt="logo" class="logo" /></a>
                 <h2>로그인</h2>
                 <input type="text" placeholder="ID" />
                 <input type="password" placeholder="Password" />
