--- a/Login/1. 첫 화면/first_main.html
+++ b/Login/1. 첫 화면/first_main.html
@@ -10,7 +10,7 @@
 
 <body>
 	<nav>
-		<h1><a href="#">Init</a></h1>
+		<h1><a href="/Login/1. 첫 화면/first_main.html">Init</a></h1>
 		<ul>
 			<li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
 			<li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
