contact, about 수정

--- a/Login/3.About us/about_main.html
+++ b/Login/3.About us/about_main.html
@@ -1,20 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
     <link rel="stylesheet" href="about_style.css">
+    <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
 </head>
+
 <body>
-    <div>
-        <H1>Init 우리들의 커리어 시작</H1>
-    </div>
-    <div>
-        <p>人 + Initialize</p>
-        <p>사람은 일을 하면서 얻는 것들이 많다, 그 중 우리는 성장하면서 </p>
-    </div>
-    
+    <nav>
+        <h1><a href="/Login/1. 첫 화면/first_main.html">Init</a></h1>
+        <ul>
+            <li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
+            <li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
+            <li><a href="/Login/2. 로그인_회원가입 화면/login_join_main.html">LOGIN</a></li>
+        </ul>
+    </nav>
+
+    <section class="about-top">
+        <div class="about-overlay">
+            <div class="slogan-left">
+                <h1 class="slogan">Init,<br> 우리들의 커리어 시작</h1>
+            </div>
+            <div class="slogan-right">
+                <div class="slogan-sub">
+                    <p><strong>Init = 人 + Initialize</strong></p>
+                    <p>사람은 일을 하며 성장합니다.
+                    <p>Init은 그 성장을 위한 첫걸음을 함께 걷습니다.</p>
+                    <p>당신의 커리어 여정, 지금 여기서 시작해보세요.</p>
+                    <br>
+                    <p>사람은 일을 하면서 성장하고, Init은 그 성장을 위한 시작점입니다.</p>
+                    <p>당신의 커리어 여정을 함께 설계해나갑니다.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="about-bottom">
+        <h3>우리가 추구하는 방향</h3>
+        <div class="features">
+            <div class="feature-box">
+                <img src="icon1.png" alt="이력서 관리">
+                <h4>이력서 관리</h4>
+                <p>깔끔한 양식으로 이력서를 작성하고 내보낼 수 있습니다.</p>
+            </div>
+            <div class="feature-box">
+                <img src="icon2.png" alt="자소서 작성">
+                <h4>자소서 작성</h4>
+                <p>가이드에 따라 효율적으로 자기소개서를 완성하세요.</p>
+            </div>
+            <div class="feature-box">
+                <img src="icon3.png" alt="지원 일정 관리">
+                <h4>지원 일정 관리</h4>
+                <p>내가 지원한 회사들의 일정을 한눈에 확인하세요.</p>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
