--- a/Login/4.Contact/contact_main.html
+++ b/Login/4.Contact/contact_main.html
@@ -6,16 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact</title>
 
-  <link rel="stylesheet" href="contact_style.css">
+  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
+  <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" rel="stylesheet">
 
 </head>
 
 <body>
-  <div>
+  <nav>
+		<h1><a href="/Login/1. 첫 화면/first_main.html">Init</a></h1>
+		<ul>
+			<li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
+			<li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
+			<li><a href="/Login/2. 로그인_회원가입 화면/login_join_main.html">LOGIN</a></li>
+		</ul>
+	</nav>
+  <div class="contact-title">
     <h3>Contact</h3>
   </div>
 
   <div class="left-container">
+    <p>소통은 언제나 환영입니다</p>
     
   </div>
   <div class="form-container">
