--- a/dong/board.html
+++ b/dong/board.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>사용자 후기 / 팁 / 정보 게시판</title>
-		<link rel="stylesheet" href="css/board.css">
+		<link rel="stylesheet" href="/dong/board.css">
 	</head>
 	
 	<body>
