--- a/dong/write.html
+++ b/dong/write.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>게시글 작성 - IT JOB</title>
-    <link rel="stylesheet" href="css/board.css">
+    <link rel="stylesheet" href="/dong/board.css">
 </head>
 <body>
     <!-- 헤더 영역 -->
